# supply-chain-dependency-auditor

./: .gitignore  .pypirc.example  README.md  RELEASE.md  SECURITY.md  cli.py  mkdocs.yml  pyproject.toml  requirements.txt
.github/: CODEOWNERS  dependabot.yml
attestations/: example.intoto.jsonl
auditor/: __init__.py  __main__.py  ai_explainer.py  api_server.py  autofix.py  breach_watchlist.py  ci_hardening.py  cli.py  dependency_policy.py  diff_scan.py  enterprise_governance.py  environment_scan.py  epss.py  http_client.py  license_policy.py  lockfile.py  maintainer.py  malware_analysis.py  osv_check.py  policy_engine.py  provenance.py  registry.py  remediation.py  report_html.py  resolver.py  sandbox.py  sarif.py  sbom.py  scanner.py  scorer.py  transitive.py  typosquat.py  version.py
data/: owners.example.json  popular_packages.json  provenance_policy.example.json  security_policy.example.json
docs/: BRANCH_PROTECTION.md  SECURITY_GOVERNANCE.md  V8_ENTERPRISE_GAPS.md  api.md  cli.md  index.md  policy.md  quickstart.md  release.md
test-project/: requirements.txt
test-project-safe/: requirements.txt
tests/: test_diff.py  test_environment_scan.py  test_exporters.py  test_http_client_cache.py  test_lockfile.py  test_lockfile_more.py  test_osv_epss.py  test_policy.py  test_provenance.py  test_remediation.py  test_sarif_export.py  test_scanner_patterns.py  test_scorer_weights.py  test_typosquat_edges.py  test_v5_false_positive_reductions.py  test_v6_autofix.py  test_v6_mocked_network_subprocess.py  test_v6_policy_engine.py  test_v7_security_depth.py  (+2 more)
(+7 files in other folders)
